force-app/main/default/objects/ht_Subscription__c/ht_Subscription__c.object-meta.xml
<CustomObject>
    <label>NIPR Subscription</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIPR Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>