force-app/main/default/objects/ht_Subscription__c/fields/ht_ExcludeCarrierAppointments__c.field-meta.xml
<CustomField>
    <fullName>d4c_ExcludeCarrierAppointments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this subscription excludes carrier appointments. Subscriptions with this flag set to true will only receive licensing alerts from NIPR and will only contain producers with the Exclude Carrier Appointments flag enabled.</description>
    <label>Exclude Carrier Appointments</label>
    <type>Checkbox</type>
</CustomField>