force-app/main/default/objects/ht_Subscription__c/fields/ht_LastNIPRSync__c.field-meta.xml
<CustomField>
    <fullName>ht_LastNIPRSync__c</fullName>
    <description>Date and time of the last successful PDB Alert sync for this subscription.</description>
    <label>Last NIPR Sync</label>
    <type>DateTime</type>
</CustomField>