force-app/main/default/objects/ht_Subscription__c/fields/ht_Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>ht_Subscription_Name__c</fullName>
    <label>NIPR Subscription Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>